[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
argh ="0.1.6"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ['derive'] }
hex = "0.4.3"
warp = "0.3.1"
reqwest = "0.11.6"
tokio = { version = '1', features = ['full'] }
log = "0.4.14"
log4rs = "1.0.0"
config = "0.11.0"

ton-indexer = {git = "https://github.com/broxus/ton-indexer.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

serde_yaml = "0.8.21"
external-ip = "4.1.0"
futures = "0.3.17"
