[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
async-trait = "0.1"
config = "0.12.0"
futures = "0.3.21"
hex = "0.4"
log = "0.4"
log4rs = "1.0"
parking_lot = "0.12.0"
public-ip = "0.2.2"
rand = "0.8"
regex = "1.5.5"
reqwest = "0.11"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "parking_lot"] }
warp = "0.3"

tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
ton-indexer = { git = "https://github.com/broxus/ton-indexer.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
